# context-sre-matrix

./: .gitignore  README.md  env.example  inference.py
docs/: deployment.md  submission_constraints.md
scripts/: deploy_hf_space.sh  pre_validate.py  validate_all_outputs.py  validate_strict_scores.py
sre_architect_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
sre_architect_env/server/: Dockerfile  __init__.py  app.py  environment.py  grading.py  requirements.txt  scenarios.py
tests/: conftest.py  test_env_determinism.py  test_inference_logs.py  test_reward_bounds.py
